add sync with wg
